--- a/v2/patrodent/templates/quienes-somos.html
+++ b/v2/patrodent/templates/quienes-somos.html
@@ -59,14 +59,14 @@
             <table class="profile">
                 <tr>
                     <td>
-                        <img src="{% static 'images/angela3.jpg' %}" alt="Fotografia de la doctora ángela martín" />
+                        <img src="{% static 'images/angela_perfil.jpg' %}" alt="Fotografia de la doctora ángela martín" />
                     </td>
                     <td>
                         <h3>Dra. Ángela Martín Gómez <a class="linkedin" href="https://www.linkedin.com/in/angelamartingom" target="_blank"><i class="fab fa-linkedin"></i></a></h3>
-                        <p>Directora médica. CIRUJANA BUCAL</p>
+                        <p>Directora médica. CIRUGÍA BUCAL E IMPLANTES - ESTETICA DENTAL</p>
                         <ul class="enum">
                             <li>Graduada en Odontología. Universidad Europea de Madrid</li>
-                            <li>Título de Especialización Universitaria en Cirugía y Rehabilitación Implantológica. Universidad de Sevilla</li>
+                            <li>Especialización en Cirugía y Rehabilitación Implantológica. Universidad de Sevilla</li>
                             <li>Máster propio en Cirugía Bucal. Universidad de Sevilla</li>
                             <li>Máster propio en Cirugía Bucal Avanzada. Universidad de Sevilla</li>
                             <li>Experto en Anatomía Oral aplicada a la Implantología e Implantoprótesis. Universidad de Sevilla</li>
@@ -74,6 +74,40 @@
                             <li>Miembro de la Sociedad Española de Cirugía Bucal (SECIB)</li>
                             <li>Miembro de la Sociedad Española de Prótesis Estomatológica (SEPES)</li>
                             <li>Comunicaciones orales en congresos y publicaciones en revistas científicas</li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="{% static 'images/belen.jpg' %}" alt="Fotográfia de la doctora Belén Yñiguez">
+                    </td>
+                    <td>
+                        <h3>Dra. Belén Yñiguez</h3>
+                        <p>ORTODONCIA</p>
+                        <ul class="enum">
+                            <li>Licenciada en Odontología. Universidad Europea de Madrid</li>
+                            <li>Máster oficial en Ortodoncia Avanzada. Universidad Europea de Madrid</li>
+                            <li>Especialista en Ortodoncia Invisible. Invisalign</li>
+                            <li>Especialista en técnica brackets autoligado Damon. </li>
+                            <li>Miembro de la Sociedad Española de Ortodoncia (SEDO)</li>
+                            <li>Miembro de la Sociedad Española de Alineadores (SEDA)</li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="{% static 'images/pablo.jpg' %}" alt="Fotográfia del anestesista Pablo Herrera">
+                    </td>
+                    <td>
+                        <h3>Dr. Pablo Herrera </h3>
+                        <p>ANESTESIA Y SEDACIÓN CONSCIENTE</p>
+                        <ul class="enum">
+                            <li>Licenciado en Medicina. Universidad de Sevilla</li>
+                            <li>Médico Especialista en Anestesiología, Reanimación y Terapéutica del Dolor. H.U.V. Rocío Sevilla</li>
+                            <li>Adjunto Especialista Anestesiología Hospital Traumatología y Rehabilitación H.U.V. Rocío Sevilla</li>
+                            <li>Doctorado por la Universidad de Sevilla</li>
+                            <li>Miembro de la Sociedad Española de Anestesiología, Reanimación y Terapéutica del Dolor (SEDAR</li>
+                            <li>Miembro de la Sociedad Andaluza-Extremeña Anestesiología (AAEAR)</li>
                         </ul>
                     </td>
                 </tr>
