--- a/v2/patrodent/templates/sedacion-consciente.html
+++ b/v2/patrodent/templates/sedacion-consciente.html
@@ -12,7 +12,7 @@
 <meta property="og:image" content="https://patrodent.com{% static 'images/sala_de_esperas.jpg' %}" />
 {% endblock %}
 
-{% block title %}Fidelización - {% endblock %}
+{% block title %}Sedación consciente - {% endblock %}
 
 {% block pageclass %}loyalty{% endblock %}
 
