--- a/v2/patrodent/templates/sedacion-consciente.html
+++ b/v2/patrodent/templates/sedacion-consciente.html
@@ -18,7 +18,7 @@
 
 {% block content-body-wrapper %}
     <div class="wrapper">
-        <div class="alpha prefix_1 suffix_1">
+        <div class="alpha prefix_1 grid_22">
             <h2 class="p3">Sedación Consciente</h2>
             <p>
                 Las personas que padecen fobia al dentista, padecen estrés y ansiedad ante cualquier visita, ya sea para el tratamiento que sea.
