pequeño cambio en el texto del CV

--- a/v2/patrodent/templates/quienes-somos.html
+++ b/v2/patrodent/templates/quienes-somos.html
@@ -63,13 +63,12 @@
                     </td>
                     <td>
                         <h3>Dra. Ángela Martín Gómez <a class="linkedin" href="https://www.linkedin.com/in/angelamartingom" target="_blank"><i class="fab fa-linkedin"></i></a></h3>
-                        <p>Directora médica. CIRUGÍA BUCAL E IMPLANTES - ESTETICA DENTAL</p>
+                        <p>Directora médica. CIRUGÍA BUCAL E IMPLANTES - ORTODONCIA - ESTETICA DENTAL</p>
                         <ul class="enum">
                             <li>Graduada en Odontología. Universidad Europea de Madrid</li>
                             <li>Especialización en Cirugía y Rehabilitación Implantológica. Universidad de Sevilla</li>
                             <li>Máster propio en Cirugía Bucal. Universidad de Sevilla</li>
                             <li>Máster propio en Cirugía Bucal Avanzada. Universidad de Sevilla</li>
-                            <li>Experto en Anatomía Oral aplicada a la Implantología e Implantoprótesis. Universidad de Sevilla</li>
                             <li>Máster Europeo en Ortodoncia y Ortopedia Dentofacial. Universidad Católica de Murcia</li>
                             <li>Miembro de la Sociedad Española de Cirugía Bucal (SECIB)</li>
                             <li>Miembro de la Sociedad Española de Prótesis Estomatológica (SEPES)</li>
