--- a/v2/patrodent/templates/quienes-somos.html
+++ b/v2/patrodent/templates/quienes-somos.html
@@ -121,10 +121,10 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="{% static 'images/empleada1.jpg' %}" alt="" /><
+                        <img src="{% static 'images/empleada1.jpg' %}" alt="" />
                     </td>
                     <td>
-                        <h3>Alba Lozano Pavón</h3>
+                        <h3>Teresa Pérez Márquez</h3>
                         <p>Higienista dental</p>
                     </td>
                 </tr>
