--- a/v2/patrodent/templates/templates/tratamiento.html
+++ b/v2/patrodent/templates/templates/tratamiento.html
@@ -50,7 +50,7 @@
         <div class="grid_7 suffix_1 omega">
             {% block before-after-title %}
                 <h4 class="margin-bot">Antes y después</h4>
-                <p> Pasa el <strong>ratón</strong> por encima de las imágenes (o tócalas) para ver el antes (casos reales)</p>
+                <p> Pulsa en las imágenes para ver el <strong>antes</strong> de cada caso.</p>
             {% endblock %}
             <div class="imgswrapper">
                 {% block before-after %}
