--- a/v2/patrodent/templates/antes-y-despues.html
+++ b/v2/patrodent/templates/antes-y-despues.html
@@ -24,7 +24,7 @@
                 Creemos que la mejor manera de que creas en nosotros es enseñandote lo que hemos hecho por otros pacientes.
                 Aqui puedes ver una recopilación de estos casos.
             </p>
-            <p> <strong>Pasa el ratón por encima de las imágenes (o tocalas desde un movil o una tablet) para ver el antes</strong></p>
+            <p>Pulsa en las imágenes para ver el <strong>antes</strong> de cada caso.</p>
             <h4>Ortodoncia</h4>
             <div class="imgswrapper">
             {% with all=1 %}
