changes for share blog urls in facebook with images and images added inside text content

--- a/v2/patrodent/templates/templates/zinnia/base.html
+++ b/v2/patrodent/templates/templates/zinnia/base.html
@@ -6,6 +6,8 @@
 
 {% block meta %}
     <meta name="generator" content="Zinnia {{ ZINNIA_VERSION }}" />
+    <meta property="og:url" content="{{ request.build_absolute_uri }}" />
+
 {% endblock meta %}
 
 {% block link %}
