--- a/v2/patrodent/templates/templates/zinnia/skeleton.html
+++ b/v2/patrodent/templates/templates/zinnia/skeleton.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n  static %}
     {% block metatags %}
-    <title>{% block title %}{% endblock title %}{% block title-page %}{% endblock title-page %} - Zinnia's Weblog</title>
+    <title>{% block title %}{% endblock title %}{% block title-page %}{% endblock title-page %} - Weblog</title>
     <meta name="robots" content="follow, all" />
     <meta name="description" content="{% block meta-description %}Patrodent Blog{% endblock meta-description %}{% block meta-description-page %}{% endblock meta-description-page %}" />
     <meta name="keywords" content="{% block meta-keywords %} blog, Dentistas en Sevilla, Dentistas, Sevilla, Odontologos Sevilla, Odontologos, Dentistas plaza de armas, Denstistas centro de Sevilla, Clinica Dental Sevilla, Clinica Dental, Ortodoncia Sevilla, Ortodoncia, Odontología Sevilla, Odontologia, ATM, Periodoncia, ATM Sevilla, Periodoncia Sevilla, plaza de armas{% endblock meta-keywords %}" />
