--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -11,7 +11,7 @@
     {% block metatags %}
     <title>{% block title %}{% endblock %}Clínica Dental Patrodent, C/ Marques de Paradas, Sevilla</title>
     <meta name="Keywords" content="{% block keywords %}Dentistas en Sevilla, Dentistas, Sevilla, Odontologos Sevilla, Odontologos, Dentistas plaza de armas, Denstistas centro de Sevilla, Clinica Dental Sevilla, Clinica Dental, Ortodoncia Sevilla, Ortodoncia, Odontología Sevilla, Odontologia, ATM, Periodoncia, ATM Sevilla, Periodoncia Sevilla, plaza de armas{% endblock %}">
-    <meta name="Description" content="{% block metadescription %}Clínica Dental Patrocinio Gómez Martínez C/ Marques de Paradas nº 22 1 º dcha Sevilla (junto a plaza de armas){% endblock %}">
+    <meta name="Description" content="{% block metadescription %}Clínica Dental Patrodent C/ Marques de Paradas nº 22 1 º dcha Sevilla (junto a plaza de armas){% endblock %}">
     {% endblock %}
     <meta property="og:locale" content="es_ES" />
     <meta property="og:site_name" content="Clínica Dental Patrodent, C/ Marques de Paradas, Sevilla" />
