--- a/v2/patrodent/templates/index.html
+++ b/v2/patrodent/templates/index.html
@@ -5,7 +5,7 @@
 {% block meta %}
 <meta property="og:title" content="Clínica Dental Patrodent, C/ Marques de Paradas, Sevilla" />
 <meta property="og:url" content="https://patrodent.com{% url 'template_view' 'index' %}">
-<meta property="og:description" content="Clínica Dental Patrocinio Gómez Martínez C/ Marques de Paradas nº 22 1 º dcha Sevilla (junto a plaza de armas)">
+<meta property="og:description" content="Clínica Dental Patrodent C/ Marques de Paradas nº 22 1 º dcha Sevilla (junto a plaza de armas)">
 <meta property="og:type" content="image/jpeg" />
 <meta property="og:image" content="https://patrodent.com/{% static 'images/sala_de_esperas.jpg' %}" />
 {% endblock %}
