--- a/v2/patrodent/templates/quienes-somos.html
+++ b/v2/patrodent/templates/quienes-somos.html
@@ -63,7 +63,7 @@
                     </td>
                     <td>
                         <h3>Dra. Ángela Martín Gómez <a class="linkedin" href="https://www.linkedin.com/in/angelamartingom" target="_blank"><i class="fab fa-linkedin"></i></a></h3>
-                        <p>Directora médica. CIRUGÍA BUCAL E IMPLANTES - ORTODONCIA - ESTETICA DENTAL</p>
+                        <p>Directora médica. CIRUGÍA BUCAL E IMPLANTES - ORTODONCIA Y ORTOPEDIA DENTOFACIAL - ESTÉTICA DENTAL</p>
                         <ul class="enum">
                             <li>Graduada en Odontología. Universidad Europea de Madrid</li>
                             <li>Especialización en Cirugía y Rehabilitación Implantológica. Universidad de Sevilla</li>
@@ -73,23 +73,6 @@
                             <li>Miembro de la Sociedad Española de Cirugía Bucal (SECIB)</li>
                             <li>Miembro de la Sociedad Española de Prótesis Estomatológica (SEPES)</li>
                             <li>Comunicaciones orales en congresos y publicaciones en revistas científicas</li>
-                        </ul>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <img src="{% static 'images/belen.jpg' %}" alt="Fotográfia de la doctora Belén Yñiguez">
-                    </td>
-                    <td>
-                        <h3>Dra. Belén Yñiguez</h3>
-                        <p>ORTODONCIA</p>
-                        <ul class="enum">
-                            <li>Licenciada en Odontología. Universidad Europea de Madrid</li>
-                            <li>Máster oficial en Ortodoncia Avanzada. Universidad Europea de Madrid</li>
-                            <li>Especialista en Ortodoncia Invisible. Invisalign</li>
-                            <li>Especialista en técnica brackets autoligado Damon. </li>
-                            <li>Miembro de la Sociedad Española de Ortodoncia (SEDO)</li>
-                            <li>Miembro de la Sociedad Española de Alineadores (SEDA)</li>
                         </ul>
                     </td>
                 </tr>
@@ -121,10 +104,10 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="{% static 'images/empleada1.jpg' %}" alt="" />
+                        <img src="{% static 'images/empleada1.png' %}" alt="" />
                     </td>
                     <td>
-                        <h3>Teresa Pérez Márquez</h3>
+                        <h3>Helena Rogerio del Castillo</h3>
                         <p>Higienista dental</p>
                     </td>
                 </tr>
