--- a/v2/patrodent/templates/quienes-somos.html
+++ b/v2/patrodent/templates/quienes-somos.html
@@ -107,7 +107,7 @@
                         <img src="{% static 'images/empleada1.png' %}" alt="" />
                     </td>
                     <td>
-                        <h3>Helena Rogerio del Castillo</h3>
+                        <h3>María Fernández Fernández</h3>
                         <p>Higienista dental</p>
                     </td>
                 </tr>
