--- a/v2/patrodent/templates/fidelizacion.html
+++ b/v2/patrodent/templates/fidelizacion.html
@@ -17,7 +17,7 @@
 
 {% block title %}Fidelización - {% endblock %}
 
-{% block pageclass %}loyalty{% endblock %}
+{% block pageclass %}history{% endblock %}
 
 
 {% block content %}
