--- a/v2/patrodent/templates/quienes-somos.html
+++ b/v2/patrodent/templates/quienes-somos.html
@@ -59,7 +59,9 @@
             <table class="profile">
                 <tr>
                     <td>
-                        <img src="{% static 'images/angela_perfil.jpg' %}" alt="Fotografia de la doctora ángela martín" />
+                        <div>
+                            <img src="{% static 'images/angela_perfil.jpg' %}" alt="Fotografia de la doctora ángela martín" />
+                        </div>
                     </td>
                     <td>
                         <h3>Dra. Ángela Martín Gómez <a class="linkedin" href="https://www.linkedin.com/in/angelamartingom" target="_blank"><i class="fab fa-linkedin"></i></a></h3>
@@ -78,7 +80,9 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="{% static 'images/pablo.jpg' %}" alt="Fotográfia del anestesista Pablo Herrera">
+                        <div>
+                            <img src="{% static 'images/pablo.jpg' %}" alt="Fotográfia del anestesista Pablo Herrera">
+                        </div>
                     </td>
                     <td>
                         <h3>Dr. Pablo Herrera </h3>
@@ -95,7 +99,9 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="{% static 'images/empleada2.jpg' %}" alt="" />
+                        <div class="little">
+                            <img src="{% static 'images/empleada2.jpg' %}" alt="" />
+                        </div>
                     </td>
                     <td>
                         <h3>Rosario Fernández Torrejón</h3>
@@ -104,7 +110,9 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="{% static 'images/empleada1.png' %}" alt="" />
+                        <div class="little">
+                            <img src="{% static 'images/empleada1.png' %}" alt="" />
+                        </div>
                     </td>
                     <td>
                         <h3>María Fernández Fernández</h3>
