--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -27,7 +27,7 @@
        <link rel="stylesheet" href="{% static 'photoswipe/dist/photoswipe.min.css' %}">
        <link rel="stylesheet" href="{% static 'photoswipe/dist/default-skin/default-skin.min.css' %}">
        <link rel="stylesheet" type="text/css" href="{% static 'jsor-jcarousel-0.3.1/examples/responsive/jcarousel.responsive.min.css' %}">
-       <link rel="stylesheet" href="{% static 'css/style.min.css' %}" type="text/css" media="all">
+       <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" media="all">
    {% endblock %}
    {% block js %}
     <script src="{% static 'js/jquery-1.7.2.min.js' %}" type="text/javascript"></script>
@@ -112,35 +112,6 @@
                             <img src="{% static 'images/patrodent_logo_horizontal.jpg' %}" alt="Clínica dental Patrodent" title="Clínica dental Patrodent">
                         </a>
                     </h1>
-                    <div class="fright">
-                        <div class="fright headerBooking">
-                            <a class="btn btn-cita" target="_blank" href="https://reservas.doctoralia.es/book.php?type=doctor&lang=es&id=24230&utm_source=widget-doctor-24230#highlight-calendar">
-                                <i class="fas fa-calendar-alt" style="font-size: 16px" alt="icono calendario"></i>
-                                Pedir cita
-                            </a>
-                            <br>
-                             <ul class="socialheader">
-                                <li>
-                                    <a href="https://www.instagram.com/clinicadentalpatrodent/" target="_blank"><i class="fab fa-instagram" style="font-size: 20px" title="Instagram" alt="Instagram"></i></a>
-                                </li>
-                                <li>
-                                    <a href="https://www.facebook.com/patrodent.patrodent" target="_blank"><i class="fab fa-facebook" style="font-size: 20px" title="Facebook" alt="Facebook"></i></a>
-                                </li>
-                                <li>
-                                    <a href="https://linkedin.com/in/patrodent-clínica-dental-a589ab111" target="_blank"><i class="fab fa-linkedin" style="font-size: 20px" title="linkedin" alt="linkedin"></i></a>
-                                </li>
-                                 <li><a href="https://twitter.com/@patrodent_" target="_blank"><i class="fab fa-twitter" style="font-size: 20px" title="twitter" alt="twitter"></i></a></li>
-                            </ul>
-                        </div>
-                        <div class="contactheader">
-                            <div class="tel"><a class="phone" href="tel:618245151"><i class="fas fa-phone-alt" style="font-size: 36px;" alt="phone"></i>618 24 51 51</a>
-                                <div class="whatssap noLinkWhatsapp"> <span>
-                                    <a href="https://wa.me/34618245151?text=Hola%20quisiera%20hacerle%20una%20consulta%20">
-                                        <i class="fab fa-whatsapp" style="font-size: 26px;" alt="whatssap"></i></a></span></div></div>
-                            <span class="openTime"> Horario: L - J 16:00 a 21:00 <br/> <span class="fridaytime">V 9:00 a 14:00</span></span>
-                        </div>
-                        <div class="clear"></div>
-                    </div>
                     <div class="movileContact">
                         <div class="tel"><a class="phone" href="tel:618245151"></i>618 24 51 51</a>
                                 <div class="whatssap noLinkWhatsapp"> <span>
@@ -148,7 +119,7 @@
                                         <i class="fab fa-whatsapp" style="font-size: 26px;" alt="whatssap"></i></a></span></div>
                         </div>
                         <div class="cita">
-                            <a class="btn btn-cita" target="_blank" href="https://reservas.doctoralia.es/book.php?type=doctor&lang=es&id=24230&utm_source=widget-doctor-24230#highlight-calendar">
+                            <a class="btn btn-cita" target="_blank" href="https://clientes.gestiondeclinica.es/30/AreaPrivada/getapp.html?cif=28823660Z&idc=cd6d564e-95c2-4e5c-bc9a-ee28e20a1b53">
                                     <i class="fas fa-calendar-alt" style="font-size: 16px" alt="icono calendario"></i>
                                     Pedir cita
                             </a>
