--- a/v2/patrodent/templates/templates/formulario-contacto.html
+++ b/v2/patrodent/templates/templates/formulario-contacto.html
@@ -104,7 +104,7 @@
     <input id="nextpagenr" name="nextpagenr" type="hidden" value="2"/>
     <input id="prevpagenr" name="prevpagenr" type="hidden" value="0"/>
     <script type="text/javascript">
-        InputRules('firsttime');
+        //InputRules('firsttime');
     </script>
     <input name="usage" type="hidden" value="e"/>
 </form>
