--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -27,7 +27,7 @@
        <link rel="stylesheet" href="{% static 'photoswipe/dist/photoswipe.min.css' %}">
        <link rel="stylesheet" href="{% static 'photoswipe/dist/default-skin/default-skin.min.css' %}">
        <link rel="stylesheet" type="text/css" href="{% static 'jsor-jcarousel-0.3.1/examples/responsive/jcarousel.responsive.min.css' %}">
-       <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" media="all">
+       <link rel="stylesheet" href="{% static 'css/style.min.css' %}" type="text/css" media="all">
    {% endblock %}
    {% block js %}
     <script src="{% static 'js/jquery-1.7.2.min.js' %}" type="text/javascript"></script>
